# A-tuo-servizio2

./: .gitignore  README.md  docker-compose.yml
Desktop/A_Tuo_Servizio/: .gitignore  README.md  docker-compose.yml
Desktop/A_Tuo_Servizio/backend/: README.md  db.sqlite3  manage.py  populate_db.py
Desktop/A_Tuo_Servizio/backend/autoservizio_project/: settings.py  wsgi.py
Desktop/A_Tuo_Servizio/backend/core_services/: urls.py  views.py
Desktop/A_Tuo_Servizio/backend/jules_legacy/: README.md  db.sqlite3
Desktop/A_Tuo_Servizio/docs/feat-user-service-v1/: README.md  client_search_results_description_J.txt  data_flow_client_search.txt  microservices_architecture_proposal.txt  mockup_project_detail_modal_O.txt  professional_dashboard_description_F.txt  professional_profile_editing_description_T.txt  requirements.txt  user_stories_professional_onboarding.txt  (+7 more)
Desktop/A_Tuo_Servizio/front-end/: .gitignore  README.md  cypress.config.js  package-lock.json  package.json  vitest.config.ts
Desktop/bot_trading/: .env  README.md  config.py  main.py  pyproject.toml  requirements.txt  temp.py
Desktop/bot_trading/backtest/: backtester.py  walk_forward.py
Desktop/bot_trading/bot_alpha_edge/: pyproject.toml
Desktop/bot_trading/core/: broker.py  data.py  risk.py  sizing.py
Desktop/bot_trading/data/bars/: dollar_bars.parquet
Desktop/bot_trading/features/: engineer.py  labels.py
Desktop/bot_trading/models/: base.py  lgbm.py  rf.py  sma_rule.py
Desktop/bot_trading/monitoring/: alerts.py  dashboard.py
Desktop/bot_trading/optimizer/: optuna_runner.py
Desktop/bot_trading/tests/: test_broker.py  test_risk.py
(+306 files in other folders)
