[tool.poetry]
name        = "bot-trading"
version     = "0.1.0"
description = "Bot di trading automatico su Binance"
authors     = ["Lorenzo Maiani <maiani98thebest@gmail.com>"]
license     = "MIT"

# Indichiamo a Poetry dove si trova il pacchetto

[[tool.poetry.packages]]
include = "core"

[[tool.poetry.packages]]
include = "features"

[[tool.poetry.packages]]
include = "models"

[[tool.poetry.packages]]
include = "monitoring"

[[tool.poetry.packages]]
include = "optimizer"

[[tool.poetry.packages]]
include = "backtest"

[tool.poetry.dependencies]
python        = ">=3.10,<3.11"
ccxt          = "^4.4.78"
loguru        = "^0.7.3"
pandas        = "^2.0.3"
numpy         = "^1.23.5"
scikit-learn  = "^1.3.2"
lightgbm      = "^4.6.0"
python-dotenv = "^1.0.1"
ta            = "^0.11.0"
vectorbt      = "^0.27.3"
optuna        = "^4.3.0"
tenacity      = "^9.0.0"

[tool.poetry.group.dev.dependencies]
ruff    = "^0.4.4"
mypy    = "^1.9.0"
pytest  = "^8.1.1"

[build-system]
requires    = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
