[project]
name = "bot-alpha-edge"
version = "0.1.0"
description = ""
authors = [
    {name = "Lorenzo Maiani",email = "maiani98thebest@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "bot_alpha_edge", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
